<resources>
    <string name="app_name">Betterplate</string>
    <string name="temp">Temp</string>
    <string name="temp_menu_item_cal">200 Cal</string>
    <string name="temp_menu_item_details">Food Item Details</string>
    <string name="temp_menu_item_title">Food Item</string>
    <string name="temp_menu_item_button">Details</string>
    <string name="restaurant_logo">Restaurant Logo</string>
    <string name="add_to_meal">Add to Meal</string>
    <string name="test_item_page_title">Test Title</string>
    <string name="test_item_page_subtitle">xx Cal | xx Carbs | xx Fat | xx Protein</string>
    <string name="item_page_customization_heading">Customization</string>
    <string name="item_page_nutrition_heading">Nutrition</string>
    <string name="customization_item_placeholder">Customization Item</string>
    <string name="customization_item_details_placeholder">xx Cal | xxg Fat</string>
    <string name="all_restaurants_title">All Restaurants</string>
    <string name="main_activity_restaurant_name_placeholder">Restaurant Name</string>
    <string name="main_activity_restaurant_details">$ | xx-xx Cals | x km</string>
    <string name="main_activity_restaurant_logo_content_description">Restaurant Logo</string>
    <string name="nutritional_details_placeholder">Nutritional Details Placeholder</string>
    <string name="nutritional_details_value_placeholder">200</string>
    <string name="homeScreenRestaurantSearchHint">Search for a Restaurant</string>
    <string name="restaurant_activity_sort_foods_prompt">Sort By:</string>
    <string name="your_meal_title">Your Meal</string>
    <string name="delete_meal_item_content_description">Delete meal item</string>
    <string name="clear_meal">CLEAR</string>
    <string name="empty_meal_prompt">Add items to your meal to see the overall nutrition.</string>
    <string name="details_button_text">Details</string>
    <string name="main_activity_bottom_text">Eat Healthy. Anywhere, Anytime.</string>
    <string name="favorite_restaurants_heading">Favorite Restaurants</string>
    <string name="view_all">View All</string>
    <string name="your_meal">Your Meal</string>
    <string name="see_current_meal">See Current Meal</string>
    <string name="logo">Logo</string>
    <string name="right_arrow">Right Arrow</string>
    <string name="view_menu">View Menu</string>
    <string name="healthier_picks">Healthier Picks</string>
    <string name="meal_items_heading">Meal Items</string>
    <string name="meal_nutrition_heading">Meal Nutrition</string>
    <string name="filter_menu_items">Filter Menu Items</string>
    <string name="clear_search_text">Clear Search Text</string>
    <string name="filter_restaurants">Filter Restaurants</string>
    <string name="contact_us">Contact Us</string>
    <string name="menu_item_warning_placeholder">This has a lot of sodium.</string>
</resources>
