<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mealItemParentConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_container_bottom_border"
    android:paddingTop="16sp"
    android:paddingBottom="16sp">

    <ImageButton
        android:id="@+id/deleteMealItemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/delete_meal_item_content_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/clear" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/mealItemDetails"
            style="@style/itemDetailsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_menu_item_details"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mealItemNutrition"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/mealItemNutrition"
            style="@style/itemNutritionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_menu_item_cal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mealItemTitle" />

        <TextView
            android:id="@+id/mealItemTitle"
            style="@style/itemTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:paddingEnd="32sp"
            android:text="@string/temp_menu_item_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>