<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivityConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/white_container_bottom_border"
        android:minHeight="?attr/actionBarSize"
        android:padding="0dp"
        android:theme="?attr/actionBarTheme"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/toolbarLogo"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/logo" />

            <ImageButton
                android:id="@+id/currentMealButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/see_current_meal"
                android:padding="8sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/current_meal_icon" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/mainActivityNestedScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:fillViewport="true"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/mainActivityConstraintWithinScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <android.support.constraint.ConstraintLayout
                android:id="@+id/mainActivityFeaturedContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rounded_container_primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/mainActivityFavoritesHeading"
                    style="@style/titleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favorite_restaurants_heading"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/mainActivityFavoriteRestaurantsRecycler"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:nestedScrollingEnabled="false"
                    app:layout_constraintBottom_toTopOf="@+id/mainActivityViewAllRestaurants"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mainActivityFavoritesHeading" />

                <TextView
                    android:id="@+id/mainActivityViewAllRestaurants"
                    style="@style/accentText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:paddingStart="16sp"
                    android:paddingTop="8sp"
                    android:paddingEnd="16sp"
                    android:paddingBottom="4sp"
                    android:text="@string/view_all"
                    android:textAllCaps="true"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/mainActivityYourMealContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rounded_container_primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mainActivityFeaturedContainer">

                <TextView
                    android:id="@+id/mainActivityMealHeading"
                    style="@style/titleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_meal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/mainActivityMealRecycler"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:nestedScrollingEnabled="false"
                    app:layout_constraintBottom_toTopOf="@+id/mainActivityViewMeal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mainActivityNoMealTextView" />

                <TextView
                    android:id="@+id/mainActivityMealOverview"
                    style="@style/accentText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_item_page_subtitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mainActivityMealHeading" />

                <TextView
                    android:id="@+id/mainActivityNoMealTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:paddingTop="62dp"
                    android:paddingBottom="46dp"
                    android:text="@string/empty_meal_prompt"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mainActivityMealOverview" />


                <TextView
                    android:id="@+id/mainActivityViewMeal"
                    style="@style/accentText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:paddingStart="16sp"
                    android:paddingTop="8sp"
                    android:paddingEnd="16sp"
                    android:paddingBottom="4sp"
                    android:text="@string/details_button_text"
                    android:textAllCaps="true"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </android.support.constraint.ConstraintLayout>

            <TextView
                android:id="@+id/mainActivityBottomText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="32dp"
                android:text="@string/main_activity_bottom_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contactUsButton" />

            <Button
                android:id="@+id/contactUsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:text="@string/contact_us"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mainActivityYourMealContainer" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>