<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/white"
    tools:context=".activity.AllRestaurantsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/white_container_bottom_border"
        android:minHeight="?attr/actionBarSize"
        android:padding="0dp"
        android:theme="?attr/actionBarTheme"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/toolbarLogo"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="72dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/currentMealButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/see_current_meal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/current_meal_icon" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/mainActivityRestaurantsList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:nestedScrollingEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:focusableInTouchMode="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@+id/searchByRestaurant" />

    <ImageButton
        android:id="@+id/clearSearchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/clear_search_text"
        android:src="@drawable/clear"
        android:elevation="2dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/searchByRestaurant"
        app:layout_constraintEnd_toEndOf="@+id/searchByRestaurant"
        app:layout_constraintTop_toTopOf="@+id/searchByRestaurant" />

    <EditText
        android:id="@+id/searchByRestaurant"
        style="@style/normalText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/search_light_rounded"
        android:drawableStart="@drawable/baseline_search_24"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/filter_restaurants"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions"
        android:padding="8dp"
        android:textSize="16sp"
        android:imeOptions="actionSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar" />


</android.support.constraint.ConstraintLayout>