<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RestaurantOverviewActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/white_container_bottom_border"
        android:minHeight="?attr/actionBarSize"
        android:padding="0dp"
        android:theme="?attr/actionBarTheme"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/toolbarLogo"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="72dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/currentMealButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/see_current_meal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/current_meal_icon" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/restaurantOverviewNestedScroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:descendantFocusability="beforeDescendants"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/restaurantOverviewConstraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:paddingBottom="64dp">


            <TextView
                android:id="@+id/restaurantTitleTextView"
                style="@style/itemPageTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/temp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logoHeaderImage" />

            <ImageView
                android:id="@+id/logoHeaderImage"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:contentDescription="@string/restaurant_logo"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rounded_container_primary"
                android:descendantFocusability="beforeDescendants"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/restaurantTitleTextView">

                <TextView
                    android:id="@+id/restaurantOverviewHealthyPicksTextView"
                    style="@style/titleText"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:text="@string/healthier_picks"
                    android:textAllCaps="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/restaurantOverviewFeaturedFoodsRecycler"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/restaurantOverviewHealthyPicksTextView" />

                <TextView
                    android:id="@+id/restaurantOverviewViewMenuTextView"
                    style="@style/accentText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/view_menu"
                    android:textAllCaps="true"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/restaurantOverviewFeaturedFoodsRecycler" />

            </android.support.constraint.ConstraintLayout>

            <ImageView
                android:id="@+id/restaurantOverviewAddToFavorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/restaurantTitleTextView"
                app:layout_constraintTop_toBottomOf="@+id/logoHeaderImage"
                app:layout_constraintVertical_bias="0.515"
                app:srcCompat="@drawable/favorite_unfilled" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>